# Geospatial-similarity-combining-TDA-LLM-agents-and-MLOps-workflows

./: .gitignore  Dockerfile  README.md  descarga.py  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  requirements_prod.txt  store_index.py
.github/workflows/: cicd.yaml
flask_app/: app.py  test.ipynb
flask_app/agents/: agents.py  query_support.py
flask_app/agents/analysis_agent/: helpers.py  prompts.py
flask_app/agents/overview_multi_agent/: helpers.py  prompts.py
flask_app/results/: confianza_matrix.parquet  cultivos.json  dict_cvegeo.json  lista_cultivos.json  municipios.json  similarity_matrix.parquet  soil.parquet  state_to_muns.json
flask_app/templates/: analyst_chat.html  chatbot.html  index.html  supervisor_chat.html
notebooks/: app_new_section.ipynb  exploration_sitios.ipynb  exploration_tda.ipynb  new_metric.ipynb  new_metric_2.ipynb  rag_agents_doc.ipynb  rag_agents_experimentation.ipynb  results_analysis.ipynb  ripserplusplus_experiment.ipynb  test1.ipynb
src/: helper.py  homology.py  preprocess_app.py  utils.py
src/clima/: data_cleaning.py  data_integration.py  data_merging.py
src/cultivos/: data_preprocessing.py
src/model/: model_building.py  model_similarity.py
src/suelo/: data_preprocessing.py
terraform/: main.tf  variables.tf
